--- a/Day - 17 Task/style.css
+++ b/Day - 17 Task/style.css
@@ -1,16 +1,16 @@
 .countries {
-    max-width:1240px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 20px;
+  max-width: 1240px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
 .country-div {
-    border:2px solid black;
-    padding: 20px;
+  border: 2px solid black;
+  padding: 20px;
 }
 
-img{
-    width: 100%;
-    height: 300px;
+img {
+  width: 100%;
+  height: 300px;
 }
