--- a/Day - 20 Task/style.css
+++ b/Day - 20 Task/style.css
@@ -1,19 +1,18 @@
-/* styles.css */
-body {
-    background-color: #f8f9fa;
-    padding-top: 50px;
+.col-md-4 {
+  position: relative;
+  text-align: center;
 }
 
-.container {
-    max-width: 960px;
-    margin: 0 auto;
+.image-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
 }
 
-h1, h2 {
-    text-align: center;
-}
-
-#nasaImage, #weather, #dogImage {
-    text-align: center;
-    margin-bottom: 20px;
+#dogImage {
+  max-width: 100%;
+  height: auto;
 }
